# archiver

./: CMakeLists.txt  archiver.cpp  archiver.h  argumentsparser.cpp  argumentsparser.h  binarytrie.cpp  binarytrie.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  helper.cpp  helper.h  huffmantable.cpp  huffmantable.h  main.cpp  priorityqueue.h  priorityqueue.tcc  readme.md  streamwrapper.cpp  streamwrapper.h  unarchiver.cpp  unarchiver.h  word.h
catch/: catch.hpp
cmake/: BuildFlags.cmake  FindCatch.cmake  TestSolution.cmake
tests/: test_all.cpp  test_argumentsparser.cpp  test_binarytrie.cpp  test_encoder_decoder.cpp  test_huffmantable.cpp  test_priorityqueue.cpp  test_streamwrapper.cpp
